[gd_scene load_steps=19 format=3 uid="uid://cug60214p43vf"]

[ext_resource type="Script" uid="uid://bcf02xka1u6cr" path="res://Enemigos/escenas/ishmael.gd" id="1_bh5i7"]
[ext_resource type="PackedScene" uid="uid://bv873rkgvdf5f" path="res://Utilidad/escenas/hurtbox.tscn" id="1_m6b71"]
[ext_resource type="PackedScene" uid="uid://03mipipnl614" path="res://Utilidad/escenas/hitbox.tscn" id="2_febkc"]
[ext_resource type="Texture2D" uid="uid://cpxfhlgpdpw62" path="res://Enemigos/texturas/xplosion1.png" id="2_jdnya"]
[ext_resource type="PackedScene" uid="uid://cffglmkpmiytj" path="res://Enemigos/armas/escenas/arma_burbuja.tscn" id="2_ms41s"]
[ext_resource type="PackedScene" uid="uid://ecsxcpo25rqp" path="res://Enemigos/armas/escenas/arma_lanza_boss.tscn" id="3_ii5pf"]
[ext_resource type="Texture2D" uid="uid://88mjlhrt5osk" path="res://Enemigos/texturas/xplosion2.png" id="3_veen0"]
[ext_resource type="Texture2D" uid="uid://dpcsehet1dg1a" path="res://Enemigos/texturas/xplosion3.png" id="4_sy42c"]
[ext_resource type="PackedScene" uid="uid://v7e5xctypu71" path="res://Enemigos/escenas/ExpOrb.tscn" id="4_uhw13"]
[ext_resource type="Texture2D" uid="uid://de0wf0ng1eyff" path="res://Enemigos/texturas/xplosion4.png" id="5_ms41s"]
[ext_resource type="Texture2D" uid="uid://bonbraiow00i5" path="res://Enemigos/texturas/Ishmaelboss1_resized.png" id="9_uhw13"]
[ext_resource type="Texture2D" uid="uid://b402wkfkrjpx8" path="res://Enemigos/texturas/Ishmaelboss2_resized.png" id="10_psn11"]
[ext_resource type="Texture2D" uid="uid://b42pyb20v6e4y" path="res://Enemigos/texturas/IshmaelBossSecond1.png" id="11_uhw13"]
[ext_resource type="Texture2D" uid="uid://cbm21xt1hsdyw" path="res://Enemigos/texturas/IshmaelBossSecond2.png" id="12_psn11"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hnvpr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jdnya")
}, {
"duration": 1.0,
"texture": ExtResource("3_veen0")
}, {
"duration": 1.0,
"texture": ExtResource("4_sy42c")
}, {
"duration": 1.0,
"texture": ExtResource("5_ms41s")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_uhw13")
}, {
"duration": 1.0,
"texture": ExtResource("10_psn11")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_uhw13")
}, {
"duration": 1.0,
"texture": ExtResource("12_psn11")
}],
"loop": true,
"name": &"walk2",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jdnya"]
radius = 133.0
height = 266.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ii5pf"]
radius = 177.0
height = 404.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uhw13"]
radius = 171.0
height = 372.0

[node name="ishmael" type="CharacterBody2D"]
script = ExtResource("1_bh5i7")
bubble_scene = ExtResource("2_ms41s")
spear_scene = ExtResource("3_ii5pf")
exp_orb_scene = ExtResource("4_uhw13")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(9.536743e-07, -1)
scale = Vector2(1.31, 1.334)
sprite_frames = SubResource("SpriteFrames_hnvpr")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(42, 33)
shape = SubResource("CapsuleShape2D_jdnya")

[node name="HurtBox" parent="." instance=ExtResource("1_m6b71")]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(20, 18)
shape = SubResource("CapsuleShape2D_ii5pf")

[node name="Hitbox" parent="." instance=ExtResource("2_febkc")]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(8, 23)
shape = SubResource("CapsuleShape2D_uhw13")

[node name="TimerBurbujas" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="TimerLanzas" type="Timer" parent="."]
wait_time = 3.0

[connection signal="received_damage" from="HurtBox" to="." method="_on_hurt_box_received_damage"]
[connection signal="timeout" from="TimerBurbujas" to="." method="_on_timer_burbujas_timeout"]
[connection signal="timeout" from="TimerLanzas" to="." method="_on_timer_lanzas_timeout"]

[editable path="HurtBox"]
[editable path="Hitbox"]
